added about section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,44 @@
         <li><button class="primary-btn">Hire Me</button></li>
       </ul>
     </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <h3 class="banner-greeting">Hi, I  am</h3>
+        <h1 class="banner-title">Mary Hardy</h1>
+        <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <div class="buttons">
+          <button class="primary-btn">Download CV</button>
+          <button class="secondary-btn">Contact</button>
+        </div>
+      </div>
+      <img class="banner-photo" src="assets/images/hardy.png" alt="Hardy">
+    </div>
   </header>
   <main>
-
+    <section class="about">
+      <div class="title">About Me</div>
+      <div class="about-content">
+        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta.</p>
+      </div>
+      <div class="about-info">
+        <div class="info">
+          <label>Name:</label>
+          <h3>Mary Hardy</h3>
+        </div>
+        <div class="info">
+          <label>Email:</label>
+          <h3>mary@fake.com</h3>
+        </div>
+        <div class="info">
+          <label>Date of Birth:</label>
+          <h3>01-01-2000</h3>
+        </div>
+        <div class="info">
+          <label>Form:</label>
+          <h3>Los Angeles, USA</h3>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
