--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     </div>
   </header>
   <main>
+    <!-- About Section start -->
     <section class="about">
-      <div class="title">About Me</div>
-      <div class="about-content">
-        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta.</p>
-      </div>
-      <div class="about-info">
+      <h3 class="section-title">About Me</h3>
+      <p class="section-description">
+        I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta.
+      </p>
+      <div class="about-container">
         <div class="info">
           <label>Name:</label>
           <h3>Mary Hardy</h3>
@@ -58,6 +59,43 @@
           <h3>Los Angeles, USA</h3>
         </div>
       </div>
+    </section>
+    <!-- What i do -->
+    <section class="what-i-do">
+    <h3 class="section-title">What I Do</h3>
+    <p class="section-description">
+      I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+    </p>
+    <div class="skills-container">
+      <div class="skill">
+        <img src="assets/images/icons/js.png" alt="">
+        <h4>Vanilla JavaScript</h4>
+        <p>
+          List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+        </p>
+      </div>
+      <div class="skill">
+        <img src="assets/images/icons/react.png" alt="">
+        <h4>React</h4>
+        <p>
+          List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+        </p>
+      </div>
+      <div class="skill">
+        <img src="assets/images/icons/nodejs.png" alt="">
+        <h4>Node.Js</h4>
+        <p>
+          List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+        </p>
+      </div>
+      <div class="skill">
+        <img src="assets/images/icons/mongo.png" alt="">
+        <h4>MongoDB</h4>
+        <p>
+          List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+        </p>
+      </div>
+    </div>
     </section>
   </main>
   <footer>
