--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
     </section>
-    <!-- What i do -->
+    <!-- What I Do Section -->
     <section class="what-i-do">
     <h3 class="section-title">What I Do</h3>
     <p class="section-description">
@@ -97,6 +97,64 @@
       </div>
     </div>
     </section>
+    <!-- Resume Section -->
+     <section class="resume">
+      <h3 class="section-title">A summary of My Resume</h3>
+      <div class="resume-container">
+        <div class="resume-column">
+          <h4 class="resume-column-title">My Education</h4>
+          <div class="resume-item">
+            <h4 class="resume-item-title">Master in Computer Engineering</h4>
+            <h5 class="item-institute">Harvard University / 2015 - 2017</h5>
+            <p class="description">
+              List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h4 class="resume-item-title">Master in Computer Engineering</h4>
+            <h5 class="item-institute">Harvard University / 2015 - 2017</h5>
+            <p class="description">
+              List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h4 class="resume-item-title">Master in Computer Engineering</h4>
+            <h5 class="item-institute">Harvard University / 2015 - 2017</h5>
+            <p class="description">
+              List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+        </div>
+        <div class="resume-column">
+          <h4 class="resume-column-title">My Experience</h4>
+          <div class="resume-item">
+            <h4 class="resume-item-title">Sr. Font End Developer</h4>
+            <h5 class="item-institute">Apple Inc / 2020 - Current</h5>
+            <p class="description">
+              List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h4 class="resume-item-title">Sr. Font End Developer</h4>
+            <h5 class="item-institute">Apple Inc / 2020 - Current</h5>
+            <p class="description">
+              List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+          <hr>
+          <div class="resume-item">
+            <h4 class="resume-item-title">Sr. Font End Developer</h4>
+            <h5 class="item-institute">Apple Inc / 2020 - Current</h5>
+            <p class="description">
+              List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </div>
+     </section>
   </main>
   <footer>
 
