--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <img class="banner-photo" src="assets/images/hardy.png" alt="Hardy">
     </div>
   </header>
+
   <main>
     <!-- About Section start -->
     <section class="about">
@@ -154,10 +155,33 @@
           </div>
         </div>
       </div>
+      <div class="download-cv">
+        <button class="primary-btn">Download CV</button>
+      </div>
      </section>
   </main>
-  <footer>
 
+  <footer>
+    <div class="footer-column">
+      <h3 class="section-title">Lets Connect</h3>
+      <p class="section-description">
+        Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+      </p>
+      <div class="social-links">
+        <a href=""><img src="assets/images/icons/facebook.png" alt=""></a>
+        <a href=""><img src="assets/images/icons/insta.png" alt=""></a>
+        <a href=""><img src="assets/images/icons/twitter.png" alt=""></a>
+      </div>
+    </div>
+    <div class="footer-column">
+      <h3 class="section-title">Let’s Message me</h3>
+      <form class="contact-form">
+        <input type="text" name="" id="name" placeholder="Your name">
+        <input type="text" name="" id="email" placeholder="Your email">
+        <textarea name="" id="message" rows="5" placeholder="Message"></textarea>
+        <button class="primary-btn" type="submit">Submit</button>
+      </form>
+    </div>
   </footer>
   
 </body>
