--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Google Free Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- CSS Style -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -27,8 +30,8 @@
         <h1 class="banner-title">Mary Hardy</h1>
         <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
         <div class="buttons">
-          <button class="primary-btn">Download CV</button>
-          <button class="secondary-btn">Contact</button>
+          <button class="primary-btn"><i class="fa fa-download" aria-hidden="true"></i> Download CV</button>
+          <button class="secondary-btn"><i class="fa fa-phone" aria-hidden="true"></i> Contact</button>
         </div>
       </div>
       <img class="banner-photo" src="assets/images/hardy.png" alt="Hardy">
@@ -156,7 +159,7 @@
         </div>
       </div>
       <div class="download-cv">
-        <button class="primary-btn">Download CV</button>
+        <button class="primary-btn"><i class="fa fa-download" aria-hidden="true"></i> Download CV</button>
       </div>
      </section>
   </main>
